# nplus1

./: .editorconfig  .env.EXAMPLE  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  introduction.rst
nplusone/: __init__.py
nplusone/core/: __init__.py  exceptions.py  listeners.py  notifiers.py  profiler.py  signals.py  stack.py
nplusone/ext/: __init__.py  celery.py  flask_sqlalchemy.py  peewee.py  sqlalchemy.py  wsgi.py
nplusone/ext/django/: __init__.py  middleware.py  patch.py
scripts/: lint.sh  mypy.sh  update_lock.sh
tests/: __init__.py  conftest.py  pytest.ini  test_celery.py  test_core.py  test_flask_sqlalchemy.py  test_peewee.py  test_sqlalchemy.py  test_wsgi.py  utils.py
tests/testapp/: __init__.py  models.py  settings.py  test_django.py  urls.py  views.py
tests/testapp/migrations/: 0001_initial.py
