[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["commitizen>=4.16.2,<5"]
docs = [
  "Sphinx>=9.0.4,<10",
  "myst-parser>=5.1.0",
  "sphinx_rtd_theme"
]
lint = [
  "interrogate>=1.7.0",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0,<5",
  "pyright[nodejs]>=1.1.409,<2",
  "ruff>=0.15.14,<0.16",
  "toml-sort>=0.24.4,<0.25"
]
test = [
  "coverage[toml]>=7.14.0,<8",
  "pytest-cov>=7.1.0,<8",
  "pytest-mock>=3.15.1,<4",
  "pytest-xdist>=3.8.0,<4",
  "pytest>=9.0.3,<10"
]

[project]
authors = [{email = "ndhgl99@gmail.com", name = "Huy Nguyen"}]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development"
]
dependencies = []
description = "nplusone is a library for detecting the n+1 queries problem in Python ORMs, including SQLAlchemy, Peewee, and the Django ORM"
license = {file = "LICENSE"}
name = "nplusone"
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "0.0.1"

[project.urls]
Documentation = "https://nplus1.readthedocs.io/"
Homepage = "https://github.com/huynguyengl99/nplus1"
Repository = "https://github.com/huynguyengl99/nplus1"

[tool.commitizen]
gpg_sign = true
name = "cz_conventional_commits"
pre_bump_hooks = [
  "scripts/update_lock.sh"
]
tag_format = "v$version"
update_changelog_on_bump = true
use_shortcuts = true
version_provider = "pep621"
version_scheme = "pep440"

[tool.hatch.build.targets.sdist]
include = ["nplusone"]

[tool.hatch.build.targets.wheel]
include = ["nplusone"]

[tool.interrogate]
badge-format = "svg"
color = true
exclude = ["build", "docs", "setup.py", "tests"]
ext = []
fail-under = 80
generate-badge = "docs/_static/"
ignore-init-method = true
ignore-init-module = true
ignore-module = false
ignore-nested-classes = false
ignore-nested-functions = false
ignore-overloaded-functions = false
ignore-private = false
ignore-property-decorators = false
style = "sphinx"
verbose = 0
whitelist-regex = []

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
overrides."lint.isort.section-order".inline_arrays = false

[tool.uv]
default-groups = "all"
