[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["commitizen>=4.16.2,<5"]
docs = [
  "Sphinx>=9.0.4,<10",
  "myst-parser>=5.1.0",
  "sphinx_rtd_theme"
]
lint = [
  "django-stubs>=6.0",
  "interrogate>=1.7.0",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0,<5",
  "pyright[nodejs]>=1.1.409,<2",
  "ruff>=0.15.14,<0.16",
  "sqlalchemy-stubs>=0.4",
  "toml-sort>=0.24.4,<0.25",
  "types-peewee>=4.0",
  {include-group = "test-all"}
]
test = [
  "coverage[toml]>=7.14.0,<8",
  "pytest-cov>=7.1.0,<8",
  "pytest-mock>=3.15.1,<4",
  "pytest-xdist>=3.8.0,<4",
  "pytest>=9.0.3,<10"
]
test-all = [
  "celery>=5.3,<6",
  "django>=4.2,<6",
  "flask-sqlalchemy>=3.0,<4",
  "flask>=2.0,<4",
  "peewee>=3.15,<4",
  "psycopg[binary]>=3.1,<4",
  "pytest-django>=4.8.0,<5",
  "sqlalchemy>=2.0,<3",
  "webtest>=3.0,<4",
  {include-group = "test"}
]
test-celery = [
  "celery>=5.3,<6",
  {include-group = "test"}
]
test-django = [
  "psycopg[binary]>=3.1,<4",
  "pytest-django>=4.8.0,<5",
  {include-group = "test"}
]
test-flask = [
  "flask-sqlalchemy>=3.0,<4",
  "flask>=2.0,<4",
  "sqlalchemy>=2.0,<3",
  "webtest>=3.0,<4",
  {include-group = "test"}
]
test-peewee = [
  "peewee>=3.15,<4",
  {include-group = "test"}
]
test-sqlalchemy = [
  "sqlalchemy>=2.0,<3",
  {include-group = "test"}
]

[project]
authors = [{email = "ndhgl99@gmail.com", name = "Huy Nguyen"}]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development"
]
dependencies = ["blinker>=1.9,<2"]
description = "nplusone is a library for detecting the n+1 queries problem in Python ORMs, including SQLAlchemy, Peewee, and the Django ORM"
license = {file = "LICENSE"}
name = "nplus1"
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "1.1.3"

[project.optional-dependencies]
celery = ["celery>=5.3"]
django = ["django>=4.2"]
flask = ["flask-sqlalchemy>=3.0", "flask>=2.0"]
peewee = ["peewee>=3.15"]
sqlalchemy = ["sqlalchemy>=2.0"]

[project.urls]
Homepage = "https://github.com/huynguyengl99/nplus1"
Repository = "https://github.com/huynguyengl99/nplus1"

[tool.commitizen]
gpg_sign = true
name = "cz_conventional_commits"
pre_bump_hooks = [
  "scripts/update_lock.sh"
]
tag_format = "v$version"
update_changelog_on_bump = true
use_shortcuts = true
version_provider = "pep621"
version_scheme = "pep440"

[tool.hatch.build.targets.sdist]
include = ["nplusone"]

[tool.hatch.build.targets.wheel]
include = ["nplusone"]

[tool.interrogate]
badge-format = "svg"
color = true
exclude = ["build", "docs", "setup.py", "tests"]
ext = []
fail-under = 80
generate-badge = "docs/_static/"
ignore-init-method = true
ignore-init-module = true
ignore-module = false
ignore-nested-classes = false
ignore-nested-functions = false
ignore-overloaded-functions = false
ignore-private = false
ignore-property-decorators = false
style = "sphinx"
verbose = 0
whitelist-regex = []

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
overrides."lint.isort.section-order".inline_arrays = false

[tool.uv]
default-groups = "all"
